Day5/ingress/examples/complete-example/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  tls:
  - hosts:
    - ec2-54-165-51-152.compute-1.amazonaws.com
    secretName: cafe-secret
  rules:
  - host: ec2-54-165-51-152.compute-1.amazonaws.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /lassi
        backend:
          serviceName: lassi-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
